package edu.fiuba.algo3.model.Pista.NivelPista;

public class PistaFacil extends NivelPista {


    public PistaFacil(String nivel) {
        super(nivel);
    }
}
