package edu.fiuba.algo3.model.Pista.NivelPista;

public class PistaMedia extends NivelPista {


    public PistaMedia(String nivel) {
        super(nivel);
    }
}
